--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="content">
-      <div class="label"></div><div class="odometer">0</div>
+      <div class="label">Github stars so far:</div><div class="odometer">0</div>
       <div class="subtitle"></div>
     </div>
 
