--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="404.html" frameborder=0 scrolling=0 width=380></iframe>
+<iframe src="http://hubstar.io/stars/HubSpot/stars" frameborder=0 scrolling=0 width=380></iframe>
