--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="bower_components/odometer/themes/odometer-theme-minimal.css" />
-    <link rel="stylesheet" href="css/stars.css" />
+    <link rel="stylesheet" href="/bower_components/odometer/themes/odometer-theme-minimal.css" />
+    <link rel="stylesheet" href="/css/stars.css" />
 
-    <script src="bower_components/odometer/odometer.js"></script>
+    <script src="/bower_components/odometer/odometer.js"></script>
   </head>
   <body>
     <div class="content">
@@ -12,6 +12,6 @@
       <div class="subtitle"></div>
     </div>
 
-    <script src="js/stars.js"></script>
+    <script src="/js/stars.js"></script>
   </body>
 </html>
