--- a/404.html
+++ b/404.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    
     <link rel="stylesheet" href="/bower_components/odometer/themes/odometer-theme-minimal.css" />
     <link rel="stylesheet" href="/css/stars.css" />
 
@@ -8,7 +10,7 @@
   </head>
   <body>
     <div class="content">
-      <div class="label">Github stars so far:</div><div class="odometer">0</div>
+      <div class="label">Github ★</div><div class="odometer">0</div>
       <div class="subtitle"></div>
     </div>
 
