--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="content">
-      <div class="label">Github ★</div><div class="odometer">0</div>
+      <div class="label">Github ★s</div><div class="odometer">0</div>
       <div class="subtitle"></div>
     </div>
 
