Add not working twitter spinner

--- a/404.html
+++ b/404.html
@@ -10,10 +10,9 @@
   </head>
   <body>
     <div class="content">
-      <div class="label">Github ★s</div><div class="odometer">0</div>
-      <div class="subtitle"></div>
     </div>
 
     <script src="/js/stars.js"></script>
+    <script src="/js/github.js"></script>
   </body>
 </html>
