Make twitter work

--- a/404.html
+++ b/404.html
@@ -14,5 +14,6 @@
 
     <script src="/js/stars.js"></script>
     <script src="/js/github.js"></script>
+    <script src="/js/twitter.js"></script>
   </body>
 </html>
