--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     
     <link rel="stylesheet" href="/bower_components/odometer/themes/odometer-theme-minimal.css" />
+    <link rel="stylesheet" href="/css/social-icons.css" />
     <link rel="stylesheet" href="/css/stars.css" />
+
 
     <script src="/bower_components/odometer/odometer.js"></script>
   </head>
