Add height to test iframe

--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<iframe src="404.html" frameborder=0 scrolling=0 width=380></iframe>
+<iframe src="404.html" frameborder=0 scrolling=0 width=384 height=64px></iframe>
