Make paths relative to allow for local developement

--- a/404.html
+++ b/404.html
@@ -2,20 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    
-    <link rel="stylesheet" href="/bower_components/odometer/themes/odometer-theme-minimal.css" />
-    <link rel="stylesheet" href="/css/social-icons.css" />
-    <link rel="stylesheet" href="/css/stars.css" />
+
+    <link rel="stylesheet" href="bower_components/odometer/themes/odometer-theme-minimal.css" />
+    <link rel="stylesheet" href="css/social-icons.css" />
+    <link rel="stylesheet" href="css/stars.css" />
 
 
-    <script src="/bower_components/odometer/odometer.js"></script>
+    <script src="bower_components/odometer/odometer.js"></script>
   </head>
   <body>
     <div class="content">
     </div>
 
-    <script src="/js/stars.js"></script>
-    <script src="/js/github.js"></script>
-    <script src="/js/twitter.js"></script>
+    <script src="js/stars.js"></script>
+    <script src="js/github.js"></script>
+    <script src="js/twitter.js"></script>
   </body>
 </html>
